--- a/src/Styles/components/_ressource.scss
+++ b/src/Styles/components/_ressource.scss
@@ -39,6 +39,7 @@ h1 {
 .developper {
   width: 315px;
   height: 550px;
+  margin-top: -10px;
   margin-left: 20%;
   background-color: $color1;
   color: $color4;
