--- a/src/Styles/components/_banner.scss
+++ b/src/Styles/components/_banner.scss
@@ -123,14 +123,14 @@ p {
  }
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 433px) {
     .container {
         width: 100%;
-        overflow: hidden;
     }
     .header-text {
+        text-align: left;
         margin-left: 29px;
-        margin-top: -146px;
+        margin-top: -120px;
         width: 356px;
         height: 290px;
     }
@@ -145,13 +145,23 @@ p {
     }
     .header-img {
         margin-right: 28px;
-        margin-top: 40px;
+        margin-top: 20%;
         width: 345px;
         height: 239px;
     }
     .scroll-down {
-        top: 65%;
+        margin-top: 150%;
         width: 50px;
         height: 50px;
+    }
+}
+
+@media only screen and (max-width: 1366px) {
+    .container {
+        margin-top: -10%;
+    }
+    .scroll-down {
+        margin-left: 15%;
+        margin-top: 150%;
     }
 }
