--- a/src/Styles/components/_chaine.scss
+++ b/src/Styles/components/_chaine.scss
@@ -84,47 +84,21 @@
     }
 }
 
-@media only screen and (max-width: 390px) {
-    .tremplin-container {
-        margin-top: 530px;
+@media only screen and (max-width: 433px) {
+    .video-container {
     }
-    .tremplin-title {
-        width: 360px;
-        height: 127px;
-        margin-left: 38px;
+    .video-title {
+        margin-left: -15%;
+        text-align: center;
     }
-    .t1 {
-        font-size: 60px;
-        font-weight: bold;
+    .video-content {
+        width: 315px;
+        margin-top: 50%;
     }
-    .t2 {
-        margin-top: 15px;
-        font-size: 30px;
-        line-height: 40px;
-    }
-    .tremplin-content {
-        margin-left: 30px;
-        margin-top: 56px;
-        font-size: 12px;
-        width: 257px;
-        height: 224px;
-    }
-    .tremplin-ytb {
-        margin-top: 350px;
-        width: 267px;
-        height: 165px;
-        margin-right: -60px;
-    }
-    .container-lance-toi {
-        margin-top: 280px;
-        margin-left: 161px;
-    }
-    .lance-toi {
-        font-size: 16px;
-    }
-    .lance-img {
-        width: 50px;
-        height: 50px;
-        margin-right: 30px;
+    .video {
+        margin-top: 90%;
+        margin-left: 0;
+        width: 315px;
+        height: 315px;
     }
 }
