--- a/src/Styles/components/_ressource.scss
+++ b/src/Styles/components/_ressource.scss
@@ -77,7 +77,7 @@ h1 {
   }
 }
 .connaitre {
-  margin-top: 100px;
+  margin-top: 90px;
   width: 315px;
   height: 550px;
   margin-left: 40px;
@@ -304,29 +304,29 @@ i {
   background: transparent;
 }
 
-@media only screen and (max-width: 390px) {
-  .ressource {
-    margin-top: -270px;
+@media only screen and (max-width: 433px) {
+  .container-ressources {
+    margin-top: 150%;
   }
-  .ressources-title {
+  .ressources-titre {
     width: 315px;
-    height: 60px;
-    font-size: 28px;
-    margin-left: 30px;
+    margin-left: 0;
+    font-size: 40px;
+    text-align: center;
   }
   .soleil {
-    width: 100px;
-    height: 100px;
-    margin-top: 50px;
-    margin-left: -20px;
+    margin-top: 20px;
+    margin-left: 80%;
   }
   .developper {
-    margin-left: 60px;
+    margin-top: 15%;
+    margin-left: 20%;
     width: 270px;
     height: 370px;
     h2 {
       margin-top: 35px;
       padding: 0;
+      margin-left: -10px;
       font-size: 18px;
     }
     p {
@@ -338,7 +338,7 @@ i {
       height: 139px;
     }
     .main {
-      margin-top: -50px;
+      margin-top: -60px;
       width: 450px;
       height: 325px;
       margin-left: -110px;
@@ -346,11 +346,13 @@ i {
     }
   }
   .connaitre {
-    margin-left: 60px;
+    margin-left: 20%;
+    margin-top: 30%;
     width: 270px;
     height: 370px;
     h2 {
-      margin-top: -20px;
+      margin-left: -10px;
+      margin-top: 20px;
       font-size: 18px;
     }
     p {
@@ -364,18 +366,19 @@ i {
     .marteau {
       width: 230px;
       height: 260px;
-      margin-top: 20px;
-      margin-left: -70px;
+      margin-top: 0;
+      margin-left: 5%;
     }
   }
   .aide {
-    margin-top: 150px;
-    margin-left: 60px;
+    margin-top: 30%;
+    margin-left: 20%;
     width: 270px;
     height: 370px;
     h2 {
       margin-top: 35px;
       padding: 0;
+      margin-left: -5px;
       font-size: 18px;
     }
     p {
@@ -388,8 +391,19 @@ i {
       height: 139px;
     }
     .kichta {
+      width: 230px;
+      height: 260px;
       margin-top: -20px;
-      margin-right: 100px;
+      margin-right: -50%;
+    }
+  }
+  .all-ressources {
+    margin-top: 40%;
+    font-size: 14px;
+    margin-left: 20%;
+    .lance {
+      width: 60px;
+      height: 60px;
     }
   }
 }
