--- a/src/Styles/components/_video.scss
+++ b/src/Styles/components/_video.scss
@@ -1,121 +1,169 @@
-h1{
-    font-family: $font1;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 80px;
+.sous-titre-video {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 25px;
+  margin-top: 30px;
+  width: 700px;
+  color: #353535;
+  text-align: left;
+  margin-left: 17%;
 }
-.button{
-    display: flex;
-    flex-direction: row;
-    font-family: $font1;
+
+.container-top-video {
+    margin-top: 10%;
+    margin-left: 5%;
+}
+
+.img-top-video {
+  margin-left: 60%;
+  margin-top: 5%;
+}
+
+.show-more-video {
+    font-family: Helvetica Neue;
     font-style: normal;
+    margin-top: 10px;
+    font-weight: 200;
+    margin-left: 17%;
+    width: 50%;
     font-size: 20px;
-    color: black;
-    p{
-        font-style: normal;
-        font-weight: 200;
-        font-size: 20px;
-        line-height: 20px;
-        text-transform: uppercase;
-    }
-}
-article{
-    margin-top: 10%; 
-    display: flex;
-    flex-direction: column;
-
-}
-.nosvid{
-    display: flex;
-    flex-direction: row;
-    .letexte{
-        margin-left: 223px;
-        h1{
-            margin-left: 10px;
-            margin-bottom: 2%;
-        }
-        p{
-            font-family: $font1;
-            font-style: normal;
-            font-size: 25px;
-        }
-        .diago{
-            width: 70px;
-            height: 70px;
-            margin-left: 10px;
-            margin-top: -13px;
-        }
-    }
-    .chat{
-        margin-top: 100px;
-        margin-right: 94px;
-    }
-}
-.vid{
-    display: flex;
-    justify-content: center;
+    line-height: 20px;
+    position: absolute;
     align-items: center;
-    h2{
-        font-style: normal;
-        font-weight: bold;
-        font-size: 40px;
-        line-height: 30px;
-        margin-right: 795px;
-    }
-    iframe{
-        margin-top: 51px;
-        margin-bottom: 51px;
-        width: 995px;
-        height: 556px;
-        background-color: grey;
-    }
-    h3{
-        font-style: normal;
-        font-weight: 500;
-        font-size: 25px;
-        line-height: 25px;
-        margin-right: 865px;
-    }
-}
-.lesvids{
-    .recherchebientot{
-        width: 100%;
-        height: 100px;
-        margin-bottom: 100px;
-        background-color: grey;
-        text-align: center;
-        font-size: 100px;
-    }
-    .gridvid{
-        width: 100%;
-        margin-left: 223px;
-        margin-right: 223px;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(312px, 195px));
-        gap: 50px;
-        div{
-            width: 100%;
-            height: 195px;
-            background-color: grey;
-        }
-        h3{
-            margin-top: 210px;
+    display: flex;
+    img {
+      margin-left: 40px;
+      transition: 0.2s;
+      -webkit-transition: 0.2s;
+      -moz-transition: 0.2s;
+      -ms-transition: 0.2s;
+      -o-transition: 0.2s;
+  }
+    img:hover {
+      cursor: pointer;
+      transform: scale(1.2);
+      -webkit-transform: scale(1.2);
+      -moz-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+      -o-transform: scale(1.2);
+  }
+  }
+  
 
-        }   
-    }
-    .voir{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        font-style: normal;
-        font-weight: 200;
-        font-size: 20px;
-        text-transform: uppercase;
-        margin-left: 223px;
-        margin-top: 120px;
-        img{
-            margin-top: -22px;
-            margin-left: 15px;
-        }
-    }
-}
+// .button{
+//     display: flex;
+//     flex-direction: row;
+//     font-family: $font1;
+//     font-style: normal;
+//     font-size: 20px;
+//     color: black;
+//     p{
+//         font-style: normal;
+//         font-weight: 200;
+//         font-size: 20px;
+//         line-height: 20px;
+//         text-transform: uppercase;
+//     }
+// }
+// article{
+//     margin-top: 10%;
+//     display: flex;
+//     flex-direction: column;
+
+// }
+// .nosvid{
+//     display: flex;
+//     flex-direction: row;
+//     .letexte{
+//         margin-left: 223px;
+//         h1{
+//             margin-left: 10px;
+//             margin-bottom: 2%;
+//         }
+//         p{
+//             font-family: $font1;
+//             font-style: normal;
+//             font-size: 25px;
+//         }
+//         .diago{
+//             width: 70px;
+//             height: 70px;
+//             margin-left: 10px;
+//             margin-top: -13px;
+//         }
+//     }
+//     .chat{
+//         margin-top: 100px;
+//         margin-right: 94px;
+//     }
+// }
+// .vid{
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     h2{
+//         font-style: normal;
+//         font-weight: bold;
+//         font-size: 40px;
+//         line-height: 30px;
+//         margin-right: 795px;
+//     }
+//     iframe{
+//         margin-top: 51px;
+//         margin-bottom: 51px;
+//         width: 995px;
+//         height: 556px;
+//         background-color: grey;
+//     }
+//     h3{
+//         font-style: normal;
+//         font-weight: 500;
+//         font-size: 25px;
+//         line-height: 25px;
+//         margin-right: 865px;
+//     }
+// }
+// .lesvids{
+//     .recherchebientot{
+//         width: 100%;
+//         height: 100px;
+//         margin-bottom: 100px;
+//         background-color: grey;
+//         text-align: center;
+//         font-size: 100px;
+//     }
+//     .gridvid{
+//         width: 100%;
+//         margin-left: 223px;
+//         margin-right: 223px;
+//         display: grid;
+//         grid-template-columns: repeat(auto-fit, minmax(312px, 195px));
+//         gap: 50px;
+//         div{
+//             width: 100%;
+//             height: 195px;
+//             background-color: grey;
+//         }
+//         h3{
+//             margin-top: 210px;
+
+//         }
+//     }
+//     .voir{
+//         display: flex;
+//         flex-direction: row;
+//         flex-wrap: wrap;
+//         font-style: normal;
+//         font-weight: 200;
+//         font-size: 20px;
+//         text-transform: uppercase;
+//         margin-left: 223px;
+//         margin-top: 120px;
+//         img{
+//             margin-top: -22px;
+//             margin-left: 15px;
+//         }
+//     }
+// }
