--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -3,6 +3,7 @@
   margin: 0%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background-color: #FFFAF4;
 }
 
 html {
@@ -304,14 +305,14 @@ p {
   }
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 433px) {
   .container {
     width: 100%;
-    overflow: hidden;
   }
   .header-text {
+    text-align: left;
     margin-left: 29px;
-    margin-top: -146px;
+    margin-top: -120px;
     width: 356px;
     height: 290px;
   }
@@ -326,14 +327,24 @@ p {
   }
   .header-img {
     margin-right: 28px;
-    margin-top: 40px;
+    margin-top: 20%;
     width: 345px;
     height: 239px;
   }
   .scroll-down {
-    top: 65%;
+    margin-top: 150%;
     width: 50px;
     height: 50px;
+  }
+}
+
+@media only screen and (max-width: 1366px) {
+  .container {
+    margin-top: -10%;
+  }
+  .scroll-down {
+    margin-left: 15%;
+    margin-top: 150%;
   }
 }
 
@@ -425,48 +436,20 @@ p {
   }
 }
 
-@media only screen and (max-width: 390px) {
-  .tremplin-container {
-    margin-top: 530px;
+@media only screen and (max-width: 433px) {
+  .video-title {
+    margin-left: -15%;
+    text-align: center;
   }
-  .tremplin-title {
-    width: 360px;
-    height: 127px;
-    margin-left: 38px;
+  .video-content {
+    width: 315px;
+    margin-top: 50%;
   }
-  .t1 {
-    font-size: 60px;
-    font-weight: bold;
-  }
-  .t2 {
-    margin-top: 15px;
-    font-size: 30px;
-    line-height: 40px;
-  }
-  .tremplin-content {
-    margin-left: 30px;
-    margin-top: 56px;
-    font-size: 12px;
-    width: 257px;
-    height: 224px;
-  }
-  .tremplin-ytb {
-    margin-top: 350px;
-    width: 267px;
-    height: 165px;
-    margin-right: -60px;
-  }
-  .container-lance-toi {
-    margin-top: 280px;
-    margin-left: 161px;
-  }
-  .lance-toi {
-    font-size: 16px;
-  }
-  .lance-img {
-    width: 50px;
-    height: 50px;
-    margin-right: 30px;
+  .video {
+    margin-top: 90%;
+    margin-left: 0;
+    width: 315px;
+    height: 315px;
   }
 }
 
@@ -528,6 +511,9 @@ p {
 }
 
 .p-concept {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: normal;
   margin-top: 200px;
   position: absolute;
 }
@@ -561,51 +547,25 @@ p {
   }
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 433px) {
   .container-concept {
-    margin-top: -30px;
+    margin-top: 200%;
   }
   .concept-title {
-    font-size: 28px;
+    margin-left: 5%;
   }
   .circle {
-    width: 191px;
-    height: 24px;
+    margin-left: 5%;
   }
-  .concept-p {
-    margin-top: -20px;
-    width: 315px;
-    height: 146px;
-    font-size: 12px;
-  }
-  .more {
-    width: 83px;
-    height: 22px;
-  }
-  .quote {
-    margin-top: 120px;
-    margin-left: 41px;
+  .title-concept {
     text-align: center;
-    width: 264px;
-    height: 36px;
-    font-size: 16px;
+    width: 315px;
+    margin-left: -2%;
   }
-  .fa-quote-left {
-    margin-left: 10px;
-    transform: translateY(-140%);
-    color: #3b51d1;
-    -webkit-transform: translateY(-140%);
-    -moz-transform: translateY(-140%);
-    -ms-transform: translateY(-140%);
-    -o-transform: translateY(-140%);
-  }
-  .fa-quote-right {
-    margin-left: -10px;
-    transform: translateY(140%);
-    -webkit-transform: translateY(140%);
-    -moz-transform: translateY(140%);
-    -ms-transform: translateY(140%);
-    -o-transform: translateY(140%);
+  .p-concept {
+    width: 315px;
+    margin-top: 70%;
+    text-align: left;
   }
 }
 
@@ -783,6 +743,16 @@ select:focus {
   }
 }
 
+@media only screen and (max-width: 433px) {
+  .grid-footer {
+    display: none;
+  }
+  .text-footer {
+    font-size: 10px;
+    margin-left: 5%;
+  }
+}
+
 a:hover {
   text-decoration: none;
 }
@@ -836,7 +806,7 @@ a:hover {
   }
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 433px) {
   .header {
     display: block;
     line-height: normal;
@@ -1031,7 +1001,7 @@ h1 {
 }
 
 .connaitre {
-  margin-top: 100px;
+  margin-top: 90px;
   width: 315px;
   height: 550px;
   margin-left: 40px;
@@ -1280,30 +1250,30 @@ i {
   background: transparent;
 }
 
-@media only screen and (max-width: 390px) {
-  .ressource {
-    margin-top: -270px;
+@media only screen and (max-width: 433px) {
+  .container-ressources {
+    margin-top: 150%;
   }
-  .ressources-title {
+  .ressources-titre {
     width: 315px;
-    height: 60px;
-    font-size: 28px;
-    margin-left: 30px;
+    margin-left: 0;
+    font-size: 40px;
+    text-align: center;
   }
   .soleil {
-    width: 100px;
-    height: 100px;
-    margin-top: 50px;
-    margin-left: -20px;
+    margin-top: 20px;
+    margin-left: 80%;
   }
   .developper {
-    margin-left: 60px;
+    margin-top: 15%;
+    margin-left: 20%;
     width: 270px;
     height: 370px;
   }
   .developper h2 {
     margin-top: 35px;
     padding: 0;
+    margin-left: -10px;
     font-size: 18px;
   }
   .developper p {
@@ -1315,19 +1285,21 @@ i {
     height: 139px;
   }
   .developper .main {
-    margin-top: -50px;
+    margin-top: -60px;
     width: 450px;
     height: 325px;
     margin-left: -110px;
     overflow: hidden;
   }
   .connaitre {
-    margin-left: 60px;
+    margin-left: 20%;
+    margin-top: 30%;
     width: 270px;
     height: 370px;
   }
   .connaitre h2 {
-    margin-top: -20px;
+    margin-left: -10px;
+    margin-top: 20px;
     font-size: 18px;
   }
   .connaitre p {
@@ -1341,18 +1313,19 @@ i {
   .connaitre .marteau {
     width: 230px;
     height: 260px;
-    margin-top: 20px;
-    margin-left: -70px;
+    margin-top: 0;
+    margin-left: 5%;
   }
   .aide {
-    margin-top: 150px;
-    margin-left: 60px;
+    margin-top: 30%;
+    margin-left: 20%;
     width: 270px;
     height: 370px;
   }
   .aide h2 {
     margin-top: 35px;
     padding: 0;
+    margin-left: -5px;
     font-size: 18px;
   }
   .aide p {
@@ -1365,8 +1338,19 @@ i {
     height: 139px;
   }
   .aide .kichta {
+    width: 230px;
+    height: 260px;
     margin-top: -20px;
-    margin-right: 100px;
+    margin-right: -50%;
+  }
+  .all-ressources {
+    margin-top: 40%;
+    font-size: 14px;
+    margin-left: 20%;
+  }
+  .all-ressources .lance {
+    width: 60px;
+    height: 60px;
   }
 }
 
@@ -1485,6 +1469,31 @@ i {
   }
 }
 
+@media only screen and (max-width: 433px) {
+  .container-valeurs {
+    margin-top: 5%;
+  }
+  .valeurs-title {
+    margin-left: 10%;
+  }
+  .grid-valeurs {
+    margin-top: 40%;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    margin-left: 30%;
+  }
+  .grid-p {
+    text-align: center;
+    margin-left: -25%;
+  }
+  .pragmatisme .grid-title {
+    margin-left: 0;
+  }
+  .pragmatisme .grid-title .grid-p {
+    margin-left: -20%;
+  }
+}
+
 .events-container {
   margin-left: 20%;
   position: relative;
@@ -1539,6 +1548,30 @@ i {
   .all-events {
     margin-left: 15%;
     margin-top: -170px;
+  }
+}
+
+@media only screen and (max-width: 433px) {
+  .events-container {
+    margin-top: 80%;
+    overflow: hidden;
+  }
+  .events-title {
+    text-align: center;
+    margin-left: -20%;
+  }
+  .events-content p {
+    margin-left: -2%;
+    width: 315px;
+    text-align: center;
+  }
+  .all-events {
+    font-size: 14px;
+    margin-left: 25%;
+  }
+  .all-events .lance {
+    width: 60px;
+    height: 60px;
   }
 }
 
@@ -1905,169 +1938,62 @@ li {
   font-family: "Helvetica Neue", sans-serif;
 }
 
-h1 {
-  font-family: "Helvetica Neue", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 80px;
-}
-
-.button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  font-family: "Helvetica Neue", sans-serif;
-  font-style: normal;
-  font-size: 20px;
-  color: black;
-}
-
-.button p {
-  font-style: normal;
-  font-weight: 200;
-  font-size: 20px;
-  line-height: 20px;
-  text-transform: uppercase;
-}
-
-article {
-  margin-top: 10%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.nosvid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.nosvid .letexte {
-  margin-left: 223px;
-}
-
-.nosvid .letexte h1 {
-  margin-left: 10px;
-  margin-bottom: 2%;
-}
-
-.nosvid .letexte p {
-  font-family: "Helvetica Neue", sans-serif;
-  font-style: normal;
-  font-size: 25px;
-}
-
-.nosvid .letexte .diago {
-  width: 70px;
-  height: 70px;
-  margin-left: 10px;
-  margin-top: -13px;
-}
-
-.nosvid .chat {
-  margin-top: 100px;
-  margin-right: 94px;
-}
-
-.vid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.vid h2 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 40px;
-  line-height: 30px;
-  margin-right: 795px;
-}
-
-.vid iframe {
-  margin-top: 51px;
-  margin-bottom: 51px;
-  width: 995px;
-  height: 556px;
-  background-color: grey;
-}
-
-.vid h3 {
+.sous-titre-video {
+  font-family: Helvetica Neue;
   font-style: normal;
   font-weight: 500;
   font-size: 25px;
   line-height: 25px;
-  margin-right: 865px;
+  margin-top: 30px;
+  width: 700px;
+  color: #353535;
+  text-align: left;
+  margin-left: 17%;
 }
 
-.lesvids .recherchebientot {
-  width: 100%;
-  height: 100px;
-  margin-bottom: 100px;
-  background-color: grey;
-  text-align: center;
-  font-size: 100px;
+.container-top-video {
+  margin-top: 10%;
+  margin-left: 5%;
 }
 
-.lesvids .gridvid {
-  width: 100%;
-  margin-left: 223px;
-  margin-right: 223px;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(312px, 195px))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(312px, 195px));
-  gap: 50px;
+.img-top-video {
+  margin-left: 60%;
+  margin-top: 5%;
 }
 
-.lesvids .gridvid div {
-  width: 100%;
-  height: 195px;
-  background-color: grey;
-}
-
-.lesvids .gridvid h3 {
-  margin-top: 210px;
-}
-
-.lesvids .voir {
+.show-more-video {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  margin-top: 10px;
+  font-weight: 200;
+  margin-left: 17%;
+  width: 50%;
+  font-size: 20px;
+  line-height: 20px;
+  position: absolute;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  font-style: normal;
-  font-weight: 200;
-  font-size: 20px;
-  text-transform: uppercase;
-  margin-left: 223px;
-  margin-top: 120px;
 }
 
-.lesvids .voir img {
-  margin-top: -22px;
-  margin-left: 15px;
+.show-more-video img {
+  margin-left: 40px;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
+.show-more-video img:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
 }
 /*# sourceMappingURL=styles.css.map */
