responsive mobile fix

--- a/src/Styles/components/_chaine.scss
+++ b/src/Styles/components/_chaine.scss
@@ -94,6 +94,7 @@
     .video-content {
         width: 315px;
         margin-top: 50%;
+        text-align: center;
     }
     .video {
         margin-top: 90%;
