--- a/src/Styles/components/_events.scss
+++ b/src/Styles/components/_events.scss
@@ -56,10 +56,12 @@
         overflow: hidden;
     }
     .events-title {
+        overflow: hidden;
         text-align: center;
         margin-left: -20%;
     }
     .events-content {
+        overflow: hidden;
         p {
             margin-left: -2%;
             width: 315px;
