--- a/src/Styles/components/_valeurs.scss
+++ b/src/Styles/components/_valeurs.scss
@@ -171,6 +171,7 @@
 
 @media only screen and (max-width: 433px) {
   .container-valeurs {
+    overflow: hidden;
     margin-top: 5%;
   }
   .valeurs-title {
