fix responsive encore

--- a/src/Styles/components/_events.scss
+++ b/src/Styles/components/_events.scss
@@ -61,7 +61,7 @@
         margin-left: -20%;
     }
     .events-content {
-        overflow: hidden;
+        width: 100%;
         p {
             margin-left: -2%;
             width: 315px;
