--- a/src/Styles/components/_concept.scss
+++ b/src/Styles/components/_concept.scss
@@ -111,7 +111,8 @@ font-weight: normal;
   .p-concept{
     width: 315px;
     margin-top: 70%;
-    text-align: left;
+    margin-left: 0;
+    text-align: center;
   } 
 }
 
