--- a/src/Styles/components/_footer.scss
+++ b/src/Styles/components/_footer.scss
@@ -1,6 +1,6 @@
 .grid-footer {
   color: #353535;
-  margin-top: 300px;
+  margin-top: 40%;
   margin-left: 20%;
   display: grid;
   gap: 150px 0px; 
