--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -13,3 +13,4 @@
 @import './components/ressources';
 @import './components/evenements'; 
 @import './components/video';
+@import './components/landing';
