--- a/src/Styles/components/_concept.scss
+++ b/src/Styles/components/_concept.scss
@@ -65,11 +65,6 @@ font-weight: normal;
 
 
 @media only screen and (min-width: 2560px) {
-  .container-concept {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
-  }
   .concept-title {
     font-size: 50px;
   }
@@ -82,36 +77,33 @@ font-weight: normal;
     margin-top: 100px;
     font-size: 18px;
   }
-  .more {
-    margin-top: 50px;
-    width: 130px;
-    height: 57px;
-  }
-  .quote {
-    margin-top: 200px;
-    font-size: 25px;
-  }
 }
 
 @media only screen and (max-width: 433px) {
   .container-concept {
-    margin-top: 200%;
+    margin-top: 150%;
+    margin-left: 0;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    text-align: center;
   }
   .concept-title {
-    margin-left: 5%;
+    margin: auto;
+    width: 315px;
   }
   .circle {
-    margin-left: 5%;
+   position: absolute;
   }
   .title-concept {
     text-align: center;
     width: 315px;
-    margin-left: -2%;
+
   }
   .p-concept{
     width: 315px;
     margin-top: 70%;
-    margin-left: 0;
+
     text-align: center;
   } 
 }
