--- a/src/Styles/components/_ressource.scss
+++ b/src/Styles/components/_ressource.scss
@@ -305,24 +305,34 @@ i {
 }
 
 @media only screen and (max-width: 433px) {
+  .ressource {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 110%;
+    display: flex;
+  }
   .container-ressources {
-    margin-top: 150%;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
   }
   .ressources-titre {
     width: 315px;
-    margin-left: 0;
+    margin: auto;
     font-size: 40px;
     text-align: center;
   }
   .soleil {
     margin-top: 20px;
-    margin-left: 80%;
+    margin: auto;
   }
   .developper {
+    margin: auto;
     margin-top: 15%;
-    margin-left: 20%;
     width: 270px;
-    overflow: hidden;
     height: 370px;
     h2 {
       margin-top: 35px;
@@ -340,13 +350,13 @@ i {
     }
     .main {
       margin-top: -60px;
-      width: 450px;
-      height: 325px;
+      width: 453px;
+      height: 300px;
       margin-left: -100px;
     }
   }
   .connaitre {
-    margin-left: 20%;
+    margin: auto;
     margin-top: 30%;
     width: 270px;
     height: 370px;
@@ -371,8 +381,8 @@ i {
     }
   }
   .aide {
+    margin: auto;
     margin-top: 30%;
-    margin-left: 20%;
     width: 270px;
     height: 370px;
     h2 {
