--- a/src/Styles/components/_video.scss
+++ b/src/Styles/components/_video.scss
@@ -1,4 +1,4 @@
-.sous-titre-video {
+.sous-titre-video1 {
   font-family: Helvetica Neue;
   font-style: normal;
   font-weight: 500;
@@ -12,8 +12,8 @@
 }
 
 .container-top-video {
-    margin-top: 10%;
-    margin-left: 5%;
+  margin-top: 10%;
+  margin-left: 5%;
 }
 
 .img-top-video {
@@ -22,148 +22,265 @@
 }
 
 .show-more-video {
-    font-family: Helvetica Neue;
-    font-style: normal;
-    margin-top: 10px;
-    font-weight: 200;
-    margin-left: 17%;
-    width: 50%;
-    font-size: 20px;
-    line-height: 20px;
-    position: absolute;
+  font-family: Helvetica Neue;
+  font-style: normal;
+  margin-top: 10px;
+  font-weight: 200;
+  margin-left: 17%;
+  width: 50%;
+  font-size: 20px;
+  line-height: 20px;
+  position: absolute;
+  align-items: center;
+  display: flex;
+  img {
+    margin-left: 40px;
+    transition: 0.2s;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    -ms-transition: 0.2s;
+    -o-transition: 0.2s;
+  }
+  img:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+  }
+}
+
+.container-video1 {
+  position: relative;
+  margin-top: 15%;
+  margin-left: 12.5%;
+  .filter {
+    margin-left: 0;
+    margin-top: 25%;
+  }
+}
+
+.last-vid {
+  position: absolute;
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 30px;
+  -align: center;
+  color: #353535;
+}
+
+.last-vid-img {
+  margin-top: 5%;
+  margin-left: -1%;
+}
+
+.sous-titre-last-vid {
+  margin-top: 5%;
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 25px;
+  color: #000000;
+}
+
+.search-vid {
+  margin-top: 20%;
+  position: absolute;
+  align-items: center;
+  display: flex;
+}
+
+.send-mail {
+  width: 60px;
+  height: 60px;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
+.send-mail:hover {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+}
+
+.form-mail {
+  color: #353535;
+  font-size: 16px;
+  font-family: $font1;
+  font-weight: lighter;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: solid 1px #353535;
+}
+
+.videos-grid {
+  height: 100%;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 0px));
+  gap: 150px;
+  margin-left: 15%;
+  margin-top: 30%;
+  width: 80%;
+}
+
+
+.video1,
+.video2,
+.video3,
+.video4,
+.video5,
+.video6 {
+  display: flex;
+  position: relative;
+  align-items: flex-end;
+  flex-direction: column;
+  justify-content: space-between;
+  img {
+    height: 250px;
+  }
+  .titre-vid {
+    margin-right: 28%;
+  }
+  transition: 0.6s;
+  -webkit-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -ms-transition: 0.6s;
+  -o-transition: 0.6s;
+}
+.video1:hover,
+.video2:hover,
+.video3:hover,
+.video4:hover,
+.video5:hover,
+.video6:hover {
+  cursor: pointer;
+ transform: scale(1.2);
+ -webkit-transform: scale(1.2);
+ -moz-transform: scale(1.2);
+ -ms-transform: scale(1.2);
+ -o-transform: scale(1.2);
+}
+
+
+.titre-vid {
+  margin-top: 75%;
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 25px;
+  /* or 100% */
+  position: absolute;
+  width: 300px;
+  background: transparent;
+  height: 47px;
+  color: #000000;
+}
+
+@media only screen and (max-width: 1920px) {
+  .container-top-video {
+    margin-left: 7%;
+  }
+  .img-top-video {
+    margin-left: 57%;
+    width: 600px;
+    height: 400px;
+  }
+}
+
+@media only screen and (max-width: 1440px) {
+
+  .videos-grid {
+    height: 100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(312px, 312px));
+    gap: 100px;
+    justify-content: center;
     align-items: center;
+    margin: auto;
+    overflow: hidden;
+    width: 100%;
+  }
+  .video1,
+  .video2,
+  .video3,
+  .video4,
+  .video5,
+  .video6 {
+    margin-top: 30%;
     display: flex;
+    position: relative;
+    align-items: flex-end;
+    flex-direction: column;
+    justify-content: space-between;
     img {
-      margin-left: 40px;
-      transition: 0.2s;
-      -webkit-transition: 0.2s;
-      -moz-transition: 0.2s;
-      -ms-transition: 0.2s;
-      -o-transition: 0.2s;
+      height: 200px;
+    }
+    .titre-vid {
+      margin-right: 5%;
+      margin-top: 70%;
+    }
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
   }
-    img:hover {
-      cursor: pointer;
-      transform: scale(1.2);
-      -webkit-transform: scale(1.2);
-      -moz-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-      -o-transform: scale(1.2);
+  .video4,
+  .video5,
+  .video6 {
+    margin-top: 15%;
   }
+}
+
+.show-more-vid {
+  margin-top: 10%;
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 200;
+  width: 50%;
+  font-size: 20px;
+  line-height: 20px;
+  position: absolute;
+  margin-left: 13.25%;
+  align-items: center;
+  display: flex;
+  img {
+    margin-left: 40px;
+    transition: 0.2s;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    -ms-transition: 0.2s;
+    -o-transition: 0.2s;
   }
-  
+  img:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+  }
 
-// .button{
-//     display: flex;
-//     flex-direction: row;
-//     font-family: $font1;
-//     font-style: normal;
-//     font-size: 20px;
-//     color: black;
-//     p{
-//         font-style: normal;
-//         font-weight: 200;
-//         font-size: 20px;
-//         line-height: 20px;
-//         text-transform: uppercase;
-//     }
-// }
-// article{
-//     margin-top: 10%;
-//     display: flex;
-//     flex-direction: column;
-
-// }
-// .nosvid{
-//     display: flex;
-//     flex-direction: row;
-//     .letexte{
-//         margin-left: 223px;
-//         h1{
-//             margin-left: 10px;
-//             margin-bottom: 2%;
-//         }
-//         p{
-//             font-family: $font1;
-//             font-style: normal;
-//             font-size: 25px;
-//         }
-//         .diago{
-//             width: 70px;
-//             height: 70px;
-//             margin-left: 10px;
-//             margin-top: -13px;
-//         }
-//     }
-//     .chat{
-//         margin-top: 100px;
-//         margin-right: 94px;
-//     }
-// }
-// .vid{
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     h2{
-//         font-style: normal;
-//         font-weight: bold;
-//         font-size: 40px;
-//         line-height: 30px;
-//         margin-right: 795px;
-//     }
-//     iframe{
-//         margin-top: 51px;
-//         margin-bottom: 51px;
-//         width: 995px;
-//         height: 556px;
-//         background-color: grey;
-//     }
-//     h3{
-//         font-style: normal;
-//         font-weight: 500;
-//         font-size: 25px;
-//         line-height: 25px;
-//         margin-right: 865px;
-//     }
-// }
-// .lesvids{
-//     .recherchebientot{
-//         width: 100%;
-//         height: 100px;
-//         margin-bottom: 100px;
-//         background-color: grey;
-//         text-align: center;
-//         font-size: 100px;
-//     }
-//     .gridvid{
-//         width: 100%;
-//         margin-left: 223px;
-//         margin-right: 223px;
-//         display: grid;
-//         grid-template-columns: repeat(auto-fit, minmax(312px, 195px));
-//         gap: 50px;
-//         div{
-//             width: 100%;
-//             height: 195px;
-//             background-color: grey;
-//         }
-//         h3{
-//             margin-top: 210px;
-
-//         }
-//     }
-//     .voir{
-//         display: flex;
-//         flex-direction: row;
-//         flex-wrap: wrap;
-//         font-style: normal;
-//         font-weight: 200;
-//         font-size: 20px;
-//         text-transform: uppercase;
-//         margin-left: 223px;
-//         margin-top: 120px;
-//         img{
-//             margin-top: -22px;
-//             margin-left: 15px;
-//         }
-//     }
-// }
+  .sous-titre-last-vid {
+    margin-bottom: 100px;
+  }
+}
